Temporary landing page created

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Exbuma - New Reading Experience</title>
+    <title>Scrival</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +41,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                     <span class="light">Exbuma</span> 
+                     <span class="light">Scrival</span> 
                 </a>
             </div>
 
@@ -53,14 +53,9 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#aboutFabula">Fabula</a>
+                        <a class="page-scroll" href="#aboutFabula">by Myhr Studio</a>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="#aboutExprimo">Exprimo</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
-                    </li>
+                    
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -74,99 +69,24 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">FABULA</h1>
-                        <p class="intro-text">Greate Reading Experience for you!
-                            <br>Created With Heart</p>
-                        <a href="#aboutFabula" class="btn btn-circle page-scroll">
-                            <i class="fa fa-angle-double-down animated"></i>
+                        <h1 class="brand-heading">Scrival</h1>
+                        <p class="intro-text">Readers experience redefined
+                        <form action="https://formspree.io/myhr.studio@gmail.com"
+                        id="signup-form" method="POST">
+                        <p>Sign Up for beta program</p>
+
+                         <input type="email" name="_replyto" id="email" placeholder="Email Address" >
+                        <input type="submit" value="Sign Up">
+                        </form>
                         </a>
                     </div>
                 </div>
             </div>
         </div>
     </header>
+  
 
-    <!-- About Section -->
-    <section id="aboutFabula" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Fabula</h2>
-                <img src="img/ipad.png" alt="ipad" width="216" height="146">
-                <p>Fabula is a program for reading interacive books.</p>
-                <p>Explore yor next world with us.</p>
-            </div>
-        </div>
-    </section>
-    <!-- Fabula Screens -->
-    <section id="fabulaScreens" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Lorem Ipsum</h2>
-                <img src="img/ipad.png" alt="ipad" width="216" height="146">
-                <img src="img/ipad.png" alt="ipad" width="216" height="146">
-                <img src="img/ipad.png" alt="ipad" width="216" height="146">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce molestie magna a libero congue, ut eleifend quam placerat. Aliquam gravida lorem leo, in lacinia neque blandit non. Vestibulum fringilla dolor a malesuada egestas. Morbi porttitor, tortor quis lacinia maximus, sem mi dignissim diam, a varius tortor ex ac libero. Donec mattis mauris commodo laoreet lobortis. Aliquam ac cursus lectus. Integer elementum pulvinar dolor.</p>
-                <p><a href="http://facebook.com">Sign up for test</a></p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Download Section -->
-    <section id="aboutExprimo" class="content-section text-center">
-        <div class="download-section">
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Exprimo</h2>
-                    <p>Exprimo is a software for creating greaye interacive experience.</p>
-                    <p>Sign for <b>Beta</b></p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Exprimo Screens -->
-    <section id="exprimoScreens" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Lorem Ipsum</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce molestie magna a libero congue, ut eleifend quam placerat. Aliquam gravida lorem leo, in lacinia neque blandit non. Vestibulum fringilla dolor a malesuada egestas. Morbi porttitor, tortor quis lacinia maximus, sem mi dignissim diam, a varius tortor ex ac libero. Donec mattis mauris commodo laoreet lobortis. Aliquam ac cursus lectus. Integer elementum pulvinar dolor.</p>
-                <p><a href="http://facebook.com">Sign up for test</a></p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact <a href = "htp://myhr.studio">MYHR</a></h2>
-                <p>Feel free to email us to provide some feedback on our software, give us suggestions for new features, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">contact@myhrstudio.com</a>
-                </p>
-                <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </section>
-
-    <!-- Map Section -->
-    <div id="map"></div>
-
-    <!-- Footer -->
-    <footer>
-        <div class="container text-center">
-            <p>Copyright &copy; Exbuma 2016</p>
-        </div>
-    </footer>
+    
 
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.js"></script>
